# Mining_OS

./: .gitignore  CMakeLists.txt  README.md
include/qbit_miner/app/: application.hpp
include/qbit_miner/control_center/: field_viewport.hpp  live_control_center.hpp  substrate_compute_runtime.hpp
include/qbit_miner/runtime/: gpu_kernel_telemetry_bridge.hpp  phase_clamped_mining_os.hpp  phase_transport_scheduler.hpp  runtime_bus.hpp  substrate_control_surface.hpp  substrate_controller.hpp  substrate_firmware_runtime.hpp  substrate_phase_program_metadata.hpp  substrate_phase_programs.hpp  substrate_stratum_harness.hpp  substrate_stratum_pow.hpp  substrate_stratum_protocol.hpp  substrate_stratum_tcp_adapter.hpp  substrate_viewport_encoder.hpp
include/qbit_miner/substrate/: field_dynamics.hpp  photonic_identity.hpp
include/qbit_miner/telemetry/: mining_metrics.hpp
src/: gpu_telemetry.cpp  gpu_telemetry.h
src/app/: application.cpp
src/control_center/: field_viewport.cpp  live_control_center.cpp  main.cpp  substrate_compute_runtime.cpp
src/runtime/: gpu_kernel_telemetry_bridge.cpp  phase_clamped_mining_os.cpp  phase_transport_scheduler.cpp  substrate_control_surface.cpp  substrate_controller.cpp  substrate_firmware_runtime.cpp  substrate_phase_program_metadata.cpp  substrate_stratum_harness.cpp  substrate_stratum_pow.cpp  substrate_stratum_protocol.cpp  substrate_stratum_tcp_adapter.cpp  substrate_viewport_encoder.cpp
src/substrate/: field_dynamics.cpp  trace_serialization.cpp
src/telemetry/: mining_metrics.cpp
tools/: live_pool_runner.cpp
tools/launchers/: Genesis Control Center.cmd
